# netbeans-gnu-autotools-language-support

./: README.md  build.xml  manifest.mf
antlr-runtime-4.2.1/: build.xml  manifest.mf
antlr-runtime-4.2.1/nbproject/: genfiles.properties  project.properties  project.xml
antlr-runtime-4.2.2/: build.xml  manifest.mf
antlr-runtime-4.2.2/nbproject/: build-impl.xml  genfiles.properties  project.xml
branding/core/core.jar/org/netbeans/core/startup/: Bundle.properties
nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.properties  project.xml
netbeans-gnu-autotools-language-support/: AUTHORS  build.xml  manifest.mf
netbeans-gnu-autotools-language-support/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
netbeans-gnu-autotools-language-support/src/org/netbeans/gnu/autotools/: layer.xml
netbeans-gnu-autotools-language-support/src/org/netbeans/gnu/autotools/autoconf/: AutoconfLanguage.java
netbeans-gnu-autotools-language-support/src/org/netbeans/gnu/autotools/automake/: AutomakeLanguage.java
netbeans-gnu-autotools-language-support/src/org/netbeans/gnu/buildsystem/: layer.xml
netbeans-gnu-autotools-language-support/src/org/netbeans/gnu/buildsystem/autoconf/: AutoconfLanguage.java
netbeans-gnu-autotools-language-support/src/org/netbeans/gnu/buildsystem/automake/: AutomakeLanguage.java
src/org/netbeans/gnu/autotools/: ACFontAndColors.xml  AMFontAndColors.xml  Bundle.properties  FontAndColors.xml  layer.xml
src/org/netbeans/gnu/autotools/autoconf/: AutoconfLanguage.java
src/org/netbeans/gnu/autotools/autoconf/completion/: AutoconfCompletionDocumentation.java  AutoconfCompletionItem.java  AutoconfCompletionProvider.java  AutoconfMacros.java
src/org/netbeans/gnu/autotools/autoconf/file/: ACDataObject.java  ACPreview.ac  ACTemplate.ac  ACVisualElement.java  configure.ac  package-info.java
src/org/netbeans/gnu/autotools/autoconf/lexer/: ACLanguageHierarchy.java  ACLexer.java  ACTokenId.java  AutoconfLanguage.java
src/org/netbeans/gnu/autotools/autoconf/parser/: ACParser.java  ACSyntaxErrorHighlightingTaskFactory.java
src/org/netbeans/gnu/autotools/autoconf/syntax/: ACSyntaxErrorHighlightingTask.java  (+1 more)
src/org/netbeans/gnu/autotools/automake/: AutomakeLanguage.java
(+221 files in other folders)
